// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / Icon / Category / File 8px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

<div
  className="c0"
/>
`;

exports[`Storyshots Atoms / Icon / Category / File 16px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Attachment16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M4.185 13.348a2 2 0 002.829 0l5.303-5.303a3.5 3.5 0 00-4.95-4.95L2.064 8.398.65 6.984l5.303-5.303a5.5 5.5 0 017.778 7.778l-5.303 5.303a4 4 0 11-5.657-5.656l5.304-5.304a2.5 2.5 0 013.535 3.536l-3.889 3.889-1.414-1.414 3.889-3.89a.5.5 0 10-.707-.707L4.185 10.52a2 2 0 000 2.828z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Document16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M11 8H5V6h6v2zM5 12h6v-2H5v2z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M11.414 0H1v16h14V3.586L11.414 0zM3 14V2h7.586L13 4.414V14H3z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        FactSheet16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M15 0H1v16h2V2h10v14h2V0z"
        fill="currentColor"
      />
      <path
        d="M8 6h3V4H8v2zM5 12v-2h6v2H5zM11 14v2H5v-2h6z"
        fill="currentColor"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Image16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        d="M8 5.5C8 6.32843 7.32843 7 6.5 7C5.67157 7 5 6.32843 5 5.5C5 4.67157 5.67157 4 6.5 4C7.32843 4 8 4.67157 8 5.5Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M11.4142 0H1V16H15V3.58579L11.4142 0ZM3 9.13148V2H10.5858L13 4.41421V8.91935L10.25 6.71936L6.4463 9.76233L4.25001 8.29813L3 9.13148ZM3 11.5352V14H13V11.4806L10.25 9.28061L6.55372 12.2376L4.25001 10.7018L3 11.5352Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Pdf16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M4.05179 12.2224C4.00723 12.0712 4 11.9337 4 11.8422C4 11.2541 4.36155 10.837 4.60562 10.6114C4.78749 10.4434 5.00112 10.2923 5.22502 10.1572C5.42711 9.80507 5.64309 9.39761 5.84981 8.97149C6.11849 8.41766 6.35394 7.86828 6.51864 7.39941C6.4764 7.32205 6.43752 7.24595 6.40247 7.1715C6.28849 6.92945 6.11861 6.51303 6.17818 6.07311C6.21408 5.80799 6.34106 5.49265 6.63986 5.26237C6.91951 5.04685 7.22889 5 7.44934 5C7.76917 5 8.11631 5.11228 8.3823 5.39623C8.6211 5.65116 8.70409 5.94929 8.73503 6.15696C8.77978 6.45742 8.74567 6.77884 8.68815 7.06923C8.82662 7.25435 8.98653 7.45184 9.16288 7.65259C9.48867 8.02347 9.83184 8.36147 10.1385 8.61644C10.1753 8.61323 10.2113 8.61042 10.2467 8.60802C10.5087 8.59031 10.9195 8.5779 11.2676 8.71819C11.4543 8.79345 11.8447 9.00657 11.9674 9.50097C12.0834 9.96789 11.8672 10.3298 11.7604 10.4784C11.3449 11.0566 10.7052 11.0685 10.322 10.983C10.0805 10.9292 9.84901 10.8254 9.64099 10.7075C9.30294 10.772 8.91532 10.8636 8.50931 10.9786C7.83579 11.1695 7.17132 11.4084 6.65873 11.6555C6.56953 11.7979 6.48287 11.9297 6.40021 12.0485C6.2392 12.2797 6.00241 12.5988 5.73202 12.786C5.65436 12.8398 5.51135 12.928 5.31738 12.9724C5.10172 13.0218 4.7805 13.0223 4.47894 12.8164C4.20346 12.6283 4.09481 12.3683 4.05179 12.2224ZM5.91925 12.1264C5.91925 12.1264 5.92165 12.1222 5.92928 12.1138C5.92354 12.1222 5.91925 12.1264 5.91925 12.1264Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M11.4142 0H1V16H15V3.58579L11.4142 0ZM3 14V2H10.5858L13 4.41421V14H3Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Print16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M4 1H12V5H16V14H12V16H4V14H0V5H4V1ZM4 12V9H12V12H14V7H2V12H4ZM10 3V5H6V3H10ZM6 14V11H10V14H6Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Spreadsheet16
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={16}
    >
      <path
        clipRule="evenodd"
        d="M1 0H11.4142L15 3.58579V16H1V0ZM5 14V12H3V14H5ZM7 10H13V8H7V10ZM5 10V8H3V10H5ZM13 4.41421V6H3V2H10.5858L13 4.41421ZM7 14V12H13V14H7Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        7
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / File 24px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  color: #6E6E69;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin-bottom: 4px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 12px 0;
  width: 90px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Attachment24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M6.364 20.506a3 3 0 004.243 0l8.485-8.485A5 5 0 1012.02 4.95l-8.569 8.568-1.414-1.414 8.569-8.568a7 7 0 019.9 9.899L12.02 21.92a5 5 0 01-7.071-7.07l8.485-8.486a3 3 0 114.243 4.243l-6.364 6.364-1.415-1.415 6.364-6.364a1 1 0 00-1.414-1.414l-8.485 8.486a3 3 0 000 4.242z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        1
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Document24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M11 10H7V8h4v2zM7 18h10v-2H7v2zM17 14H7v-2h10v2z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M16.414 1H3v22h18V5.586L16.414 1zM5 21V3h10.586L19 6.414V21H5z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        2
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        FactSheet24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M17 7h-4V5h4v2zM17 19H7v-2h10v2zM17 15H7v-2h10v2z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M3 1h18v22H3V1zm2 20h14V3H5v18z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        3
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Image24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M7 9C7 7.34315 8.34315 6 10 6C11.6569 6 13 7.34315 13 9C13 10.6569 11.6569 12 10 12C8.34315 12 7 10.6569 7 9ZM10 8C9.44772 8 9 8.44772 9 9C9 9.55228 9.44772 10 10 10C10.5523 10 11 9.55228 11 9C11 8.44772 10.5523 8 10 8Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M16.4142 1H3V23H21V5.58579L16.4142 1ZM5 15.1314V3H15.5858L19 6.41421V14.9193L15 11.7194L9.94632 15.7623L7.00006 13.7982L5 15.1314ZM5 17.535V21H19V17.4806L15 14.2806L10.0537 18.2376L7 16.2018L5 17.535Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        4
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Pdf24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M7 17.7168C7 17.8262 7.00828 17.974 7.05111 18.1306C7.09087 18.2761 7.193 18.5478 7.46842 18.7506C7.78313 18.9823 8.13164 18.987 8.37416 18.9271C8.58686 18.8745 8.74377 18.7705 8.83071 18.7056C9.01006 18.5717 9.16293 18.3957 9.27892 18.249C9.40547 18.0889 9.53661 17.9005 9.66816 17.6968C9.80318 17.4878 9.94673 17.2499 10.0953 16.99C10.8715 16.5724 11.8934 16.1735 12.9172 15.8606C13.557 15.6652 14.1704 15.5115 14.6985 15.4084C15.0031 15.6064 15.3389 15.7794 15.6822 15.8619C15.9159 15.9181 16.213 15.9471 16.526 15.8598C16.8623 15.7659 17.1411 15.5579 17.3321 15.2715C17.4564 15.0849 17.6493 14.7148 17.5438 14.2569C17.4294 13.7603 17.053 13.5169 16.8204 13.4158C16.5885 13.3151 16.3463 13.2811 16.1575 13.2677C15.9554 13.2534 15.7388 13.2582 15.521 13.2741C15.4267 13.281 15.3285 13.2902 15.2269 13.3017C14.7304 12.8748 14.1713 12.2871 13.6502 11.6476C13.3304 11.2551 13.0414 10.8633 12.8005 10.5C12.9072 10.0125 12.9761 9.49539 12.9144 9.04869C12.8802 8.80082 12.792 8.46803 12.5451 8.18395C12.2654 7.86204 11.8823 7.7168 11.5 7.7168C11.2269 7.7168 10.8779 7.78107 10.5765 8.0315C10.2659 8.2896 10.1426 8.63098 10.1074 8.91151C10.046 9.40005 10.2217 9.90196 10.3805 10.2655C10.4566 10.4399 10.5475 10.6225 10.6504 10.8105C10.4029 11.6226 10.021 12.5944 9.58808 13.5564C9.26703 14.2699 8.92866 14.9543 8.6136 15.5384C8.27376 15.7519 7.9581 15.987 7.70049 16.2437C7.37307 16.5699 7 17.0704 7 17.7168ZM12.3328 13.9479C12.0503 14.0342 11.7641 14.1277 11.4788 14.2275C11.6799 13.7751 11.8745 13.311 12.0526 12.8528L12.0998 12.911C12.3433 13.2098 12.6014 13.5074 12.8662 13.7921C12.6889 13.8415 12.5107 13.8936 12.3328 13.9479Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M16.4142 1H3V23H21V5.58579L16.4142 1ZM5 21V3H15.5858L19 6.41421V21H5Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        5
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Print24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        d="M16 16H8V14H16V16Z"
        fill="currentColor"
      />
      <path
        d="M8 19H16V17H8V19Z"
        fill="currentColor"
      />
      <path
        clipRule="evenodd"
        d="M5 2H19V7H23V18H19V22H5V18H1V7H5V2ZM5 16V11H19V16H21V9H3V16H5ZM17 4V7H7V4H17ZM7 20V13H17V20H7Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        6
      </title>
    </svg>
  </div>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Spreadsheet24
      </span>
    </div>
    <svg
      aria-hidden="false"
      className="c5"
      focusable="false"
      height={24}
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width={24}
    >
      <path
        clipRule="evenodd"
        d="M3 1H16.4142L21 5.58579V23H3V1ZM8 21V19H5V21H8ZM10 17H19V15H10V17ZM8 17V15H5V17H8ZM19 6.41421V13H5V3H15.5858L19 6.41421ZM10 21V19H19V21H10Z"
        fill="currentColor"
        fillRule="evenodd"
      />
      <title>
        7
      </title>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Atoms / Icon / Category / File 32px 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -16px;
  margin-right: -16px;
}

.c0 > * {
  padding-left: 16px;
  padding-right: 16px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

<div
  className="c0"
/>
`;
